Add immutable deployment actions
